{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 334,
  "lineage": "b4fc4ddd-9b24-527d-d373-ab5e959155d3",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-12-20T14:12:01.063-08:00",
            "enable_cdn": false,
            "fingerprint": "wBfAUa0JG-I=",
            "generated_id": 7949686852572600414,
            "health_checks": [
              "projects/ml-demo-384110/global/httpHealthChecks/http-health-check"
            ],
            "id": "projects/ml-demo-384110/global/backendServices/backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "backend-service",
            "port_name": "http",
            "project": "ml-demo-384110",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ml-demo-384110/global/backendServices/backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_http_health_check.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.107.176.12",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-12-20T14:11:49.100-08:00",
            "id": "projects/ml-demo-384110/global/addresses/frontend-ip",
            "name": "frontend-ip",
            "prefix_length": 0,
            "project": "ml-demo-384110",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ml-demo-384110/global/addresses/frontend-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/ml-demo-384110/global/forwardingRules/http-lb-forwarding-rule",
            "ip_address": "34.107.176.12",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "http-lb-forwarding-rule",
            "port_range": "80-80",
            "project": "ml-demo-384110",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ml-demo-384110/global/forwardingRules/http-lb-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/ml-demo-384110/global/targetHttpProxies/http-lb-proxy"
          },
          "dependencies": [
            "google_compute_backend_bucket.default",
            "google_compute_global_address.default",
            "google_compute_target_http_proxy.default",
            "google_compute_url_map.default-http",
            "google_storage_bucket.default",
            "random_id.bucket_prefix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "default-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/ml-demo-384110/global/forwardingRules/http-lb-forwarding-rule-https",
            "ip_address": "34.107.176.12",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "http-lb-forwarding-rule-https",
            "port_range": "443-443",
            "project": "ml-demo-384110",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ml-demo-384110/global/forwardingRules/http-lb-forwarding-rule-https",
            "target": "https://www.googleapis.com/compute/v1/projects/ml-demo-384110/global/targetHttpsProxies/https-lb-proxy"
          },
          "dependencies": [
            "google_compute_backend_bucket.default",
            "google_compute_global_address.default",
            "google_compute_managed_ssl_certificate.default",
            "google_compute_target_https_proxy.default",
            "google_compute_url_map.default-http",
            "google_storage_bucket.default",
            "random_id.bucket_prefix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-12-20T14:12:13.672-08:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/ml-demo-384110/global/targetHttpProxies/http-lb-proxy",
            "name": "http-lb-proxy",
            "project": "ml-demo-384110",
            "proxy_bind": false,
            "proxy_id": 4237149304100149330,
            "self_link": "https://www.googleapis.com/compute/v1/projects/ml-demo-384110/global/targetHttpProxies/http-lb-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/ml-demo-384110/global/urlMaps/http-lb"
          },
          "dependencies": [
            "google_compute_backend_bucket.default",
            "google_compute_url_map.default-http",
            "google_storage_bucket.default",
            "random_id.bucket_prefix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-12-20T14:12:13.723-08:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/ml-demo-384110/global/targetHttpsProxies/https-lb-proxy",
            "name": "https-lb-proxy",
            "project": "ml-demo-384110",
            "proxy_bind": false,
            "proxy_id": 6415618448196294738,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ml-demo-384110/global/targetHttpsProxies/https-lb-proxy",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/ml-demo-384110/global/sslCertificates/cert"
            ],
            "url_map": "https://www.googleapis.com/compute/v1/projects/ml-demo-384110/global/urlMaps/http-lb"
          },
          "dependencies": [
            "google_compute_backend_bucket.default",
            "google_compute_managed_ssl_certificate.default",
            "google_compute_url_map.default-http",
            "google_storage_bucket.default",
            "random_id.bucket_prefix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "default2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-12-20T14:12:13.847-08:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/ml-demo-384110/global/targetHttpsProxies/test-proxy2",
            "name": "test-proxy2",
            "project": "ml-demo-384110",
            "proxy_bind": false,
            "proxy_id": 6757912949252085842,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ml-demo-384110/global/targetHttpsProxies/test-proxy2",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/ml-demo-384110/global/sslCertificates/cert"
            ],
            "url_map": "https://www.googleapis.com/compute/v1/projects/ml-demo-384110/global/urlMaps/http-lb"
          },
          "dependencies": [
            "google_compute_backend_bucket.default",
            "google_compute_managed_ssl_certificate.default",
            "google_compute_url_map.default-http",
            "google_storage_bucket.default",
            "random_id.bucket_prefix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-12-20T14:12:23.157-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/ml-demo-384110/global/backendServices/backend-service",
            "default_url_redirect": [],
            "description": "a description",
            "fingerprint": "2-tGafgH7zk=",
            "header_action": [],
            "host_rule": [
              {
                "description": "",
                "hosts": [
                  "cdn.lab-demo.cloud"
                ],
                "path_matcher": "allpaths"
              }
            ],
            "id": "projects/ml-demo-384110/global/urlMaps/url-map",
            "map_id": 9172513034435745832,
            "name": "url-map",
            "path_matcher": [
              {
                "default_route_action": [],
                "default_service": "https://www.googleapis.com/compute/v1/projects/ml-demo-384110/global/backendServices/backend-service",
                "default_url_redirect": [],
                "description": "",
                "header_action": [],
                "name": "allpaths",
                "path_rule": [],
                "route_rules": []
              }
            ],
            "project": "ml-demo-384110",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ml-demo-384110/global/urlMaps/url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_service.default",
            "google_compute_http_health_check.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-12-20T14:12:02.046-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/ml-demo-384110/global/backendBuckets/media-backend-bucket",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "o7vwkze_aP0=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/ml-demo-384110/global/urlMaps/http-lb",
            "map_id": 6576867914378303581,
            "name": "http-lb",
            "path_matcher": [],
            "project": "ml-demo-384110",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ml-demo-384110/global/urlMaps/http-lb",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_bucket.default",
            "google_storage_bucket.default",
            "random_id.bucket_prefix"
          ]
        }
      ]
    }
  ]
}